--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@gorhom/bottom-sheet": "^4.6.3",
     "apisauce": "^3.0.1",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
     "expo-font": "^12.0.5",
+    "expo-image": "~1.12.13",
     "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
@@ -25,7 +27,8 @@
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
